# MasterEngine

./: .gitignore  CMakeLists.txt  README.md
doc/: Audio.md  Check Pointer  Mod  Model.md  Struct  TODO.md
doc/graphic/: 1. structure.md  3. Model.md  4. particles.md  5. terrain.md  6. PostProcess.md
inc/glad/: glad.h
res/models/man/: model.dae
res/shaders/: simple.vs.glsl  skinning.vs.glsl
res/test/: file.ini
res/textures/: default.tga
src/: common.h  main.cpp
src/engine/: Config.cpp  Config.h  Input.cpp  Timer.cpp  Timer.h  library.cpp
src/engine/datatype/: Flag32.cpp  Flag32.h
src/engine/datatype/3D/: Matrix4x4.cpp  Matrix4x4.h  Vector4.cpp  Vector4.h
src/engine/exception/: Exception.cpp  Exception.h  LoadException.cpp  LoadException.h
src/engine/load/: TextFile.cpp  TextFile.h
src/engine/utils/: StringUtils.cpp  StringUtils.h
src/game/: Game.cpp  Game.h
src/game/entities/: Entity.cpp  Entity.h  GroundEnt.cpp  GroundEnt.h  TestEnt.cpp
src/game/maps/: LobbyMap.cpp  LobbyMap.h
src/graphic/: Camera.cpp  Camera.h  ElementBufferObject.cpp  ElementBufferObject.h  FrustumCulling.cpp  FrustumCulling.h  Graphic.cpp  Graphic.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramMgr.cpp  ShaderProgramMgr.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
src/graphic/models/: Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  ModelMgr.cpp  ModelMgr.h  SimpleModel.cpp  SimpleModel.h
src/graphic/models/animation/: AnimationModel.cpp  AnimationModel.h  ogldev_math_3d.h  ogldev_util.h
src/graphic/models/iqm/: IqmModel.cpp  IqmModel.h  iqm.cpp  util.h
src/graphic/particles/: Sprite.cpp
src/mod/: Plugin.cpp  PluginSystem.cpp
src/test/: Test.cpp  Test.h  TestExample.h
src/test/file/: TestIni.cpp  TestIni.h  TestJson.cpp
src/test/graphic/: Graphic.cpp  Graphic.h
tools/zstd/: ZZZZZZ.bat
